--- a/part4/BlogList-backend/package.json
+++ b/part4/BlogList-backend/package.json
@@ -16,12 +16,12 @@
     "cors": "2.8.5",
     "dotenv": "16.3.2",
     "express": "4.18.2",
+    "lodash": "4.17.21",
     "mongoose": "8.1.0"
   },
   "devDependencies": {
     "eslint": "8.56.0",
     "jest": "29.7.0",
-    "morgan": "1.10.0",
     "nodemon": "3.0.3"
   },
   "jest": {
