--- a/part4/BlogList-backend/package.json
+++ b/part4/BlogList-backend/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "fly logs",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +20,11 @@
     "cors": "2.8.5",
     "dotenv": "16.3.2",
     "express": "4.18.2",
+    "express-async-errors": "^3.1.1",
     "lodash": "4.17.21",
-    "mongoose": "8.1.0"
+    "mongoose": "8.1.0",
+    "morgan": "^1.10.0",
+    "supertest": "6.3.4"
   },
   "devDependencies": {
     "eslint": "8.56.0",
@@ -25,6 +32,7 @@
     "nodemon": "3.0.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
