--- a/part4/BlogList-backend/.env
+++ b/part4/BlogList-backend/.env
@@ -1,6 +1,7 @@
 PORT=3001
 MONGODB_URI="mongodb://127.0.0.1:27017/blog-list"
 TEST_MONGODB_URI="mongodb://127.0.0.1:27017/blog-list-test"
+SECRET="wordSecret" 
 
 # MONGODB_URI="mongodb+srv://attisalejandro:attis1234@cluster0.ffytb6m.mongodb.net/blog-list?retryWrites=true&w=majority"
 # TEST_MONGODB_URI="mongodb+srv://attisalejandro:attis1234@cluster0.ffytb6m.mongodb.net/blog-list-test?retryWrites=true&w=majority"
