--- a/part7/Blog-List-Reactquery/package.json
+++ b/part7/Blog-List-Reactquery/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "jest",
-    "cy:open": "cypress open"
+    "lint": "eslint --fix . --ext js,jsx",
+    "format": "prettier --write .",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.49.0",
     "axios": "1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -27,10 +27,10 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "cypress": "^13.8.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^3.0.2",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-vitest-globals": "^1.5.0",
@@ -39,6 +39,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
     "npm": "^10.5.2",
+    "prettier": "^3.3.2",
     "vitest": "^1.5.0"
   },
   "jest": {
