--- a/part4/BlogList-backend/package.json
+++ b/part4/BlogList-backend/package.json
@@ -12,7 +12,7 @@
     "logs:prod": "fly logs",
     "lint": "eslint .",
     "test": "NODE_ENV=test jest --verbose --runInBand",
-    "start:test" : "NODE_ENV=test nodemon index.js"
+    "start:test": "NODE_ENV=test nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +30,8 @@
     "supertest": "6.3.4"
   },
   "devDependencies": {
-    "eslint": "8.56.0",
+    "eslint": "^9.6.0",
+    "eslint-config-google": "^0.14.0",
     "jest": "29.7.0",
     "nodemon": "3.0.3"
   },
